--- a/lang/ar.json
+++ b/lang/ar.json
@@ -2,6 +2,32 @@
     "Welcome": "مرحبا",
     "desc": "يفي هو نظام فواتير ذكي مصمم لتبسيط عملياتك المالية، بدقة وسهولة. يوفر طرقًا مختصرة وسريعة للوصول إلى المستخدمين من خلال شراكات استراتيجية مع شركات محلية وعالمية، مما يعزز كفاءة أعمالك ويمنحك تجربة موثوقة وعصرية.",
     "Settings":"الإعدادات",
-    "Know More":"اعرف المزيد"
-
+    "Know More":"اعرف المزيد",
+    "Updated_at": "تم التحديث في",
+    "Created_at": "تم الإنشاء في",
+    "balanc": "الرصيد",
+    "name": "الاسم",
+    "account":"حساب",
+    "accounts":"الحسابات البنكية",
+    "Name": "الاسم",
+    "Phone": "رقم الهاتف",
+    "Email": "البريد الإلكتروني",
+    "Created At": "تاريخ الإنشاء",
+    "Updated At": "تاريخ التحديث",
+    "customer": "عميل",
+    "customers": "العملاء",
+    "Page Not Found": "الصفحة غير موجودة",
+    "Sorry, the page you are looking for could not be found.": "عذراً، الصفحة التي تبحث عنها غير موجودة.",
+    "Sorry, you are not authorized to access this page.": "عذراً، ليس لديك صلاحية للوصول إلى هذه الصفحة.",
+    "Sorry, something went wrong on our end.": "عذراً، حدث خطأ في الخادم.",
+    "Go Home": "العودة للرئيسية",
+    "Unauthorized": "غير مصرح",
+    "Forbidden": "ممنوع",
+    "Not Found": "غير موجود",
+    "Page Expired": "انتهت صلاحية الصفحة",
+    "Too Many Requests": "طلبات كثيرة جداً",
+    "Server Error": "خطأ في الخادم",
+    "Service Unavailable": "الخدمة غير متوفرة",
+    "companies": "الشركات",
+    "company" : "شركة"
 }
