--- a/lang/en.json
+++ b/lang/en.json
@@ -2,5 +2,27 @@
     "Welcome": "Welcome",
     "desc" : "Yafi is a smart invoicing system designed to simplify your financial operations with accuracy and ease. It offers fast and seamless user access through strategic partnerships with local and global companies, delivering a modern and reliable business experience.",
       "Settings":"Settings",
-      "Know More": "Know More"
+      "Know More": "Know More",
+      "Updated_at":"Updated at",
+      "Created_at": "Created at",
+      "balanc": "Balance",
+      "name": "Name",
+      "account":"Account",
+      "accounts":"Accounts",
+      "Name": "Name",
+      "Phone": "Phone",
+      "Email": "Email",
+      "Created At": "Created At",
+      "Updated At": "Updated At",
+      "customer": "Customer",
+      "customers": "Customers",
+      "Unauthorized": "Unauthorized",
+      "Forbidden": "Forbidden",
+      "Not Found": "Not Found",
+      "Page Expired": "Page Expired",
+      "Too Many Requests": "Too Many Requests",
+      "Server Error": "Server Error",
+      "Service Unavailable": "Service Unavailable",
+          "companies": "Companies",
+    "company" : "Company"
 }
